RESOLVED FIXED40168
[GTK] RenderThemeGtk leaks memory
https://bugs.webkit.org/show_bug.cgi?id=40168
Summary [GTK] RenderThemeGtk leaks memory
Martin Robinson
Reported 2010-06-04 08:50:34 PDT
SSIA
Attachments
Remove unecessary releaseRef (1.87 KB, patch)
2010-06-04 09:02 PDT, Martin Robinson
no flags
Call gtk_widget_destroy in the destructor (1.44 KB, patch)
2010-06-04 09:54 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2010-06-04 09:02:07 PDT
Created attachment 57886 [details] Remove unecessary releaseRef
Martin Robinson
Comment 2 2010-06-04 09:54:18 PDT
Created attachment 57890 [details] Call gtk_widget_destroy in the destructor
Xan Lopez
Comment 3 2010-06-04 14:35:44 PDT
Comment on attachment 57886 [details] Remove unecessary releaseRef r=me
Xan Lopez
Comment 4 2010-06-04 14:36:22 PDT
Comment on attachment 57890 [details] Call gtk_widget_destroy in the destructor r=me
Martin Robinson
Comment 5 2010-06-04 17:12:02 PDT
Comment on attachment 57886 [details] Remove unecessary releaseRef Clearing flags on attachment: 57886 Committed r60723: <http://trac.webkit.org/changeset/60723>
Martin Robinson
Comment 6 2010-06-04 17:12:37 PDT
Comment on attachment 57890 [details] Call gtk_widget_destroy in the destructor Clearing flags on attachment: 57890 Committed r60724: <http://trac.webkit.org/changeset/60724>
Martin Robinson
Comment 7 2010-06-04 17:12:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.