2010-06-04  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Xan Lopez.

        [GTK] RenderThemeGtk leaks memory
        https://bugs.webkit.org/show_bug.cgi?id=40168

        Remove the use of releaseRef to assign a value to a RefPtr. This results in
        the original pointer taking an extra reference.

        * platform/gtk/RenderThemeGtk.cpp:
        (WebCore::RenderThemeGtk::initMediaStyling): Remove the use of releaseRef here.

Canonical link: https://commits.webkit.org/51746@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60723 268f45cc-cd09-0410-ab3c-d52691b4dbfc